--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <title>About | Jesse Schimmel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="\assets\css\auxstylesheet.css">
+    <link rel="stylesheet" type="text/css" href="assets\css\auxstylesheet.css">
 
   </head>
   
@@ -58,7 +58,7 @@
         <h3>Trivia Game</h3>
         </div>
         <div class="work">
-        <img src="https://via.placeholder.com/150" alt="Rutgers Info Widget">
+        <img src="https://jhowardschimmel.github.io/TriviaGame/" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
         </div>
