--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,7 @@
         </div>
         <div class="work">
         <img src="https://jhowardschimmel.github.io/TriviaGame/" alt="Rutgers Info Widget">
+        <a href="url">https://jhowardschimmel.github.io/TriviaGame/</a>
 
         <h3>Rutgers Info Widget</h3>
         </div>
